css/app.css
#iZotova {
    color: #3d506f; /*#445a7c;*/ /*#4a6786;*/
    font-family: Old Standard TT, Arial, Helvetica, sans-serif;
    /*-webkit-font-smoothing: antialiased;*/
    font-size: 18px;
    padding-bottom: 50px;
    /*background-image: url("../images/seamless_texture.png");*/
}

#menu-phantom {
    display: none;
}

#main {
    margin-top: 20px;
}

.title {
    text-align: center;
    margin: 20px auto;
}

h4 {
    margin-top: 0;
    font-size: 22px;
}

h5 {
    font-size: 18px;
}

author {
    margin-right: 12px;
}

context, toc, edu, ski {
    display: block;
}

toc, edu, ski {
    margin-bottom: 5px;
}

toc {
    margin-top: 17px;
}

p {
    margin-top: 30px;
}

edu author {
    font-
}

p:first-child {
    margin-top: 0;
}

title {
    margin-bottom: 20px;
}

cite {
    font-size: 16px;
}
.navbar {
    border-radius: 0;
}

.navbar-inverse .navbar-form {
    border-color: none !important;
}
.navbar-inverse {
    background-color: transparent;
    border-color: transparent;
}

.navbar-inverse a.navbar-brand.active,
.navbar-inverse a.navbar-brand.active> i,
.navbar-inverse a.dropdown.active> i,
.navbar-inverse .navbar-nav .dropdown.active,
.navbar-inverse .navbar-nav .dropdown.active>a,
.navbar-inverse .navbar-nav>.nav-item.active,
.navbar-inverse .navbar-nav>.nav-item.active> a {
    background-color: #405f91 !important;
    color: white;
}

.navbar-inverse a.navbar-brand:hover,
.navbar-inverse .navbar-nav > li a:hover {
    color: lightgray !Important;
}

.navbar-inverse .navbar-nav .dropdown,
.navbar-inverse .navbar-nav .dropdown>a {
    background-color: #405f91 !important;
}

.menuItemBlur {
    color: #9d9d9d !important;
}

#home-menu {
    display: flex;
}

#home-menu > i {
    align-self: center;
}

#menu.navbar-inverse {
    background-color: #405f91;
    border-color: #143883;
}

div[ui-view] {
    position: relative;
    left: 0%;
    padding: 0 10px;
    margin-top: 20px;
    width: 100%;
}

.leftProfile section  {
    margin: auto;

}

.profileImage {
    text-align: center;
    display: flex;
}

.profileImage > img.img-loading {
    padding: 98px 65px;
    visibility:visible;
    margin: auto;
}

.profileImage > img {
    width: 225px;
    margin: auto;
    align-self: center;
    border-radius: 10px;
    border: 3px solid #405f91;
}



.profileAddress{
    width: 230px;
    padding: 30px 0 10px;
    opacity: 0.9;
    margin: auto;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.profileAddress address{
    margin-top: 10px;
}

.rightProfile {
    padding: 0;
    justify-content: center;
    align-content: center;
}

.rightProfile section {
    margin: auto;
    align-self: center;
}

ul.achievement {
    list-style-type: square;
}

ul.achievement > li {
    padding-bottom: 10px;
}

p.excerpt span {
    font-style: italic;
    padding-left: 10px;
}

p.excerpt i {
    opacity: 0.8;
}

footer {
    width: 100%;
    height: 25px;
    color: white;
    background-color: #405f91;
    position: fixed;
    bottom: 0;
    left: 0;
    padding-left: 0px;
    padding-right: 0px;
}

.years {
    border-bottom: 2px dotted #405f91;
    float: right;
}

contacts {
  position: relative;
  top: 6px;
}

footer .box {
    margin: 0 auto;
}

footer .box p {
    height: 25px;
    font-size: 0.8em;
    padding: 3px 0 5px;
    border-top: 1px solid #405f91;
}

ng-include.ng-enter,
[ng-include].ng-enter,
ng-view.ng-enter,
[ng-view].ng-enter,
ui-view.ng-enter,
[ui-view].ng-enter {
    opacity: 0;
    -webkit-transition: opacity 1s;
    -moz-transition: opacity 1s;
    -ms-transition: opacity 1s;
    -o-transition: opacity 1s;
    transition: opacity 1s;
}
ng-include.ng-enter-active,
[ng-include].ng-enter-active,
ng-view.ng-enter-active,
[ng-view].ng-enter-active,
ui-view.ng-enter-active,
[ui-view].ng-enter-active {
    opacity: 1;
}
.ng-animate-block-transitions {
    -webkit-transition: 0s all !important;
    -moz-transition: 0s all !important;
    -ms-transition: 0s all !important;
    -o-transition: 0s all !important;
    transition: 0s all !important;
    -webkit-transition: 0s all !important;
}
.ng-hide-add-active,
.ng-hide-remove {
    display: block !important;
}
.ng-hide-add-active,
.ng-hide-remove {
    display: block !important;
}
[ng:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak,
.ng-hide {
    display: none !important;
}
ng:form {
    display: block;
}
/* Chrome, Safari, Opera */
@-webkit-keyframes fadeItem {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
/* Standard syntax */
.flexListItem {
    -webkit-animation: fadeItem 0.5s linear;
    animation: fadeItem 0.5s linear;
}

@-moz-keyframes fadeItem {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
@-webkit-keyframes fadeItem {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
@-o-keyframes fadeItem {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
@keyframes fadeItem {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@media all and (min-width: 768px) {
    #home {
        display: flex;
    }
    .rightProfile {
        display: flex;
        height: 292px;
    }

}

@media all and (max-width: 768px) {
    .profile-mobile {
        text-align: justify;
    }
    .years {
        float: none;
        white-space: nowrap;
        text-align; right;
        margin-left: 10px;
    }
}
@media all and (max-width: 992px) {
    .container {
        width: auto;
    }
}

@media (max-width: 850px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
}

